<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:layout_marginBottom="48dip"
		android:fillViewport="true"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
			<TextView
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_marginLeft="6dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/edit_shortcut"
			/>
			<EditText android:id="@+id/edit_shortcut" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:inputType="text"
			/>
		</LinearLayout>	
	</ScrollView>
	
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="-48dip"
	>
		<Button android:id="@+id/button_confirm"
			android:text="@string/dialog_confirm" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
		/>
		<Button android:id="@+id/button_cancel" 
			android:text="@string/dialog_cancel" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
		/>
	</LinearLayout>

</LinearLayout>
